--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,10 +108,10 @@
         </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_gravity="center">
+    android:gravity="center_horizontal"
+    android:layout_gravity="center_horizontal">
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -168,7 +168,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/poppins_regular"
                     android:text="70%"
-                    android:textColor="@color/pink_light"
+                    android:textColor="@color/yellow"
                     android:textSize="10sp" />
             </LinearLayout>
 
