--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,21 +5,88 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center_horizontal"
-
+    android:layout_margin="24dp"
     tools:context=".ScheduleFragment">
 
-    <Button
-        android:id="@+id/timeButton"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Time"
-        />
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="fill_horizontal"
+    android:gravity="fill_horizontal"
+    android:layout_marginBottom="16dp"
+    android:orientation="horizontal">
 
     <TextView
-        android:padding="24px"
-        android:id="@+id/selectedTimeTextView"
-        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+
+        android:text="Sechedule"
+        android:layout_weight="8"
+        android:fontFamily="@font/poppins_medium"
+        android:textColor="@color/yellow"
+        android:textSize="24sp"
+        />
+
+    <ImageButton
+        android:id="@+id/AddTime"
+        android:background="@drawable/circle"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:backgroundTint="@color/yellow"
+        android:src="@drawable/ic_baseline_add_24" />
+
+
+</LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:id="@+id/timeRecyclerView"
+        tools:listitem="@layout/schedule"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill_horizontal"
+        android:gravity="fill_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Set Temperature"
+            android:layout_weight="5"
+
+            android:fontFamily="@font/poppins_medium"
+            android:textColor="@color/yellow"
+            android:textSize="20sp"
+            />
+
+        <EditText
+            android:id="@+id/tempSet"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:cursorVisible="false"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppins_medium"
+            android:textSize="24sp"
+            android:text="34"
+            android:inputType="number"
+            android:lineHeight="@dimen/lb_action_1_line_height"
+            android:textColor="@color/yellow"
+            android:textAlignment="center"
+
+            android:background="@color/white"
+
+            android:src="@drawable/ic_baseline_add_24" />
+
+
+    </LinearLayout>
+
 </LinearLayout>
