--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,7 +39,6 @@
                 android:layout_width="120dp"
                 style="@style/circleImageView"
                 android:layout_height="120dp"
-
                 android:layout_marginTop="24dp"
                 android:background="@drawable/user_icon"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,8 +48,9 @@
 
             <ImageButton
                 android:id="@+id/editImg"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:padding="8dp"
+                android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/user_icon"
@@ -197,7 +197,7 @@
                     android:textSize="15sp"
                     android:text="@string/phone"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/userPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
